Fixed warnings and project cosmetics

--- a/featexp_demo.ipynb
+++ b/featexp_demo.ipynb
@@ -16,15 +16,20 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import xgboost as xgb\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import roc_auc_score\n",
-    "from featexp import univariate_plotter\n",
-    "from featexp import get_trend_stats\n",
-    "from featexp import get_univariate_plots"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Local imports,\n",
+    "from featexp import (\n",
+    "    get_trend_stats, \n",
+    "    get_univariate_plots, \n",
+    "    univariate_plotter\n",
+    ")"
    ]
   },
   {
@@ -35,75 +40,95 @@
    },
    "outputs": [],
    "source": [
-    "# Functions for data preprocessing\n",
-    "def get_nonull_dummy_data(application_train_raw, dummy_drop=['ORGANIZATION_TYPE']):\n",
-    "    # Idenifying float cols with less nulls and imputing with mean\n",
+    "# Functions for data preprocessing.\n",
+    "def get_nonull_dummy_data(\n",
+    "    application_train_raw, dummy_drop=[\"ORGANIZATION_TYPE\"]\n",
+    "):\n",
+    "    # Idenifying float cols with less nulls and imputing with mean.\n",
     "    nulls = pd.isnull(application_train_raw).sum()\n",
     "    less_nulls = nulls[(nulls < 3075) & (nulls != 0)].index\n",
     "    less_nulls_float = []\n",
     "    for i in range(len(less_nulls)):\n",
-    "        if application_train_raw[less_nulls[i]].dtype != 'O':\n",
+    "        if application_train_raw[less_nulls[i]].dtype != \"O\":\n",
     "            less_nulls_float.append(less_nulls[i])\n",
     "\n",
-    "    application_train_raw[less_nulls_float] = application_train_raw[less_nulls_float].fillna(application_train_raw[less_nulls_float].mean())\n",
+    "    application_train_raw[less_nulls_float] = application_train_raw[\n",
+    "        less_nulls_float\n",
+    "    ].fillna(application_train_raw[less_nulls_float].mean())\n",
     "\n",
-    "    # Idenifying float cols with high nulls and creating null_flag column and imputing with min-10\n",
+    "    # Idenifying float cols with high nulls and creating null_flag \n",
+    "    # column and imputing with min-10.\n",
     "    more_nulls = nulls[(nulls >= 3075)].index\n",
     "    more_nulls_float = []\n",
     "    for i in range(len(more_nulls)):\n",
-    "        if application_train_raw[more_nulls[i]].dtype != 'O':\n",
+    "        if application_train_raw[more_nulls[i]].dtype != \"O\":\n",
     "            more_nulls_float.append(more_nulls[i])\n",
     "\n",
-    "    application_train_raw[more_nulls_float] = application_train_raw[more_nulls_float].fillna(application_train_raw[more_nulls_float].min() - 100)\n",
+    "    application_train_raw[more_nulls_float] = application_train_raw[\n",
+    "        more_nulls_float\n",
+    "    ].fillna(application_train_raw[more_nulls_float].min() - 100)\n",
     "\n",
-    "    # Get dummies. Drop some columns for now\n",
-    "    application_train_raw.drop(columns=dummy_drop, axis=1, inplace=True)  # Try using later\n",
+    "    # Get dummies. Drop some columns for now.\n",
+    "    application_train_raw.drop(\n",
+    "        columns=dummy_drop, axis=1, inplace=True\n",
+    "    )  # Try using later.\n",
     "\n",
     "    all_cols = application_train_raw.columns\n",
     "    cat_cols = []\n",
     "    for col in all_cols:\n",
-    "        if application_train_raw[col].dtype == 'O':\n",
+    "        if application_train_raw[col].dtype == \"O\":\n",
     "            cat_cols.append(col)\n",
     "\n",
-    "    application_train_raw = pd.get_dummies(application_train_raw, columns=cat_cols, dummy_na=True)\n",
+    "    application_train_raw = pd.get_dummies(\n",
+    "        application_train_raw, columns=cat_cols, dummy_na=True\n",
+    "    )\n",
     "\n",
     "    return application_train_raw\n",
     "\n",
     "\n",
     "def import_and_create_train_test_data(test_size=0.33, random_state=42):\n",
-    "    application_raw = pd.read_csv('demo/data/application_train.csv')\n",
-    "    application = get_nonull_dummy_data(application_raw, dummy_drop=['ORGANIZATION_TYPE'])\n",
+    "    application_raw = pd.read_csv(\"demo/data/application_train.csv\")\n",
+    "    application = get_nonull_dummy_data(\n",
+    "        application_raw, dummy_drop=[\"ORGANIZATION_TYPE\"]\n",
+    "    )\n",
     "\n",
-    "    X = application.drop(['TARGET'], axis=1) # Contains ID\n",
-    "    y = application['TARGET']\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=test_size, random_state=random_state)\n",
+    "    X = application.drop([\"TARGET\"], axis=1)  # Contains ID.\n",
+    "    y = application[\"TARGET\"]\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(\n",
+    "        X, y, test_size=test_size, random_state=random_state\n",
+    "    )\n",
     "\n",
-    "    train_users = X_train[['SK_ID_CURR']]\n",
-    "    train_users['TARGET'] = y_train\n",
-    "    test_users = X_test[['SK_ID_CURR']]\n",
-    "    test_users['TARGET'] = y_test\n",
+    "    train_users = X_train[[\"SK_ID_CURR\"]]\n",
+    "    train_users[\"TARGET\"] = y_train\n",
+    "    test_users = X_test[[\"SK_ID_CURR\"]]\n",
+    "    test_users[\"TARGET\"] = y_test\n",
     "    train_users.reset_index(drop=True, inplace=True)\n",
     "    test_users.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "    return(X_train, X_test, y_train, y_test, train_users, test_users)\n",
+    "    return (X_train, X_test, y_train, y_test, train_users, test_users)\n",
+    "\n",
     "\n",
     "def import_and_create_TEST_data():\n",
-    "    application_raw = pd.read_csv('demo/data/application_test.csv')\n",
-    "    application = get_nonull_dummy_data(application_raw, dummy_drop=['ORGANIZATION_TYPE'])\n",
+    "    application_raw = pd.read_csv(\"demo/data/application_test.csv\")\n",
+    "    application = get_nonull_dummy_data(\n",
+    "        application_raw, dummy_drop=[\"ORGANIZATION_TYPE\"]\n",
+    "    )\n",
     "\n",
-    "    X = application # Contains ID\n",
+    "    X = application  # Contains ID.\n",
     "\n",
-    "    users = X[['SK_ID_CURR']]\n",
+    "    users = X[[\"SK_ID_CURR\"]]\n",
     "    users.reset_index(drop=True, inplace=True)\n",
     "\n",
-    "    return(X, users)\n",
+    "    return (X, users)\n",
+    "\n",
+    "\n",
     "def get_imp_df(xgb_model):\n",
     "    imp = pd.DataFrame(np.asarray(list(xgb_model.get_fscore().keys())))\n",
-    "    imp.columns = ['Feature']\n",
-    "    imp['importance'] = np.asarray(list(xgb_model.get_fscore().values()))\n",
-    "    imp = imp.sort_values(by=['importance'], ascending=False)\n",
+    "    imp.columns = [\"Feature\"]\n",
+    "    imp[\"importance\"] = np.asarray(list(xgb_model.get_fscore().values()))\n",
+    "    imp = imp.sort_values(by=[\"importance\"], ascending=False)\n",
     "    imp = imp.reset_index(drop=True)\n",
-    "    return (imp)\n"
+    "    return imp"
    ]
   },
   {
@@ -4036,7 +4061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
