formating in plots

--- a/featexp_demo.ipynb
+++ b/featexp_demo.ipynb
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
@@ -2399,7 +2399,284 @@
       "[109]\ttrain-auc:0.77215\ttest-auc:0.75819\n",
       "[110]\ttrain-auc:0.77234\ttest-auc:0.75831\n",
       "[111]\ttrain-auc:0.77246\ttest-auc:0.75834\n",
-      "[112]\ttrain-auc:0.77259\ttest-auc:0.75842\n"
+      "[112]\ttrain-auc:0.77259\ttest-auc:0.75842\n",
+      "[113]\ttrain-auc:0.77272\ttest-auc:0.75852\n",
+      "[114]\ttrain-auc:0.77286\ttest-auc:0.75856\n",
+      "[115]\ttrain-auc:0.77295\ttest-auc:0.75857\n",
+      "[116]\ttrain-auc:0.77308\ttest-auc:0.75860\n",
+      "[117]\ttrain-auc:0.77320\ttest-auc:0.75863\n",
+      "[118]\ttrain-auc:0.77335\ttest-auc:0.75863\n",
+      "[119]\ttrain-auc:0.77344\ttest-auc:0.75870\n",
+      "[120]\ttrain-auc:0.77355\ttest-auc:0.75872\n",
+      "[121]\ttrain-auc:0.77374\ttest-auc:0.75876\n",
+      "[122]\ttrain-auc:0.77390\ttest-auc:0.75889\n",
+      "[123]\ttrain-auc:0.77402\ttest-auc:0.75890\n",
+      "[124]\ttrain-auc:0.77411\ttest-auc:0.75891\n",
+      "[125]\ttrain-auc:0.77424\ttest-auc:0.75894\n",
+      "[126]\ttrain-auc:0.77435\ttest-auc:0.75892\n",
+      "[127]\ttrain-auc:0.77449\ttest-auc:0.75899\n",
+      "[128]\ttrain-auc:0.77461\ttest-auc:0.75906\n",
+      "[129]\ttrain-auc:0.77475\ttest-auc:0.75917\n",
+      "[130]\ttrain-auc:0.77490\ttest-auc:0.75920\n",
+      "[131]\ttrain-auc:0.77499\ttest-auc:0.75927\n",
+      "[132]\ttrain-auc:0.77509\ttest-auc:0.75925\n",
+      "[133]\ttrain-auc:0.77518\ttest-auc:0.75925\n",
+      "[134]\ttrain-auc:0.77533\ttest-auc:0.75931\n",
+      "[135]\ttrain-auc:0.77541\ttest-auc:0.75934\n",
+      "[136]\ttrain-auc:0.77551\ttest-auc:0.75939\n",
+      "[137]\ttrain-auc:0.77563\ttest-auc:0.75942\n",
+      "[138]\ttrain-auc:0.77572\ttest-auc:0.75947\n",
+      "[139]\ttrain-auc:0.77579\ttest-auc:0.75946\n",
+      "[140]\ttrain-auc:0.77591\ttest-auc:0.75946\n",
+      "[141]\ttrain-auc:0.77601\ttest-auc:0.75950\n",
+      "[142]\ttrain-auc:0.77607\ttest-auc:0.75951\n",
+      "[143]\ttrain-auc:0.77619\ttest-auc:0.75950\n",
+      "[144]\ttrain-auc:0.77626\ttest-auc:0.75951\n",
+      "[145]\ttrain-auc:0.77641\ttest-auc:0.75952\n",
+      "[146]\ttrain-auc:0.77653\ttest-auc:0.75948\n",
+      "[147]\ttrain-auc:0.77663\ttest-auc:0.75950\n",
+      "[148]\ttrain-auc:0.77669\ttest-auc:0.75952\n",
+      "[149]\ttrain-auc:0.77676\ttest-auc:0.75946\n",
+      "[150]\ttrain-auc:0.77690\ttest-auc:0.75948\n",
+      "[151]\ttrain-auc:0.77700\ttest-auc:0.75953\n",
+      "[152]\ttrain-auc:0.77710\ttest-auc:0.75958\n",
+      "[153]\ttrain-auc:0.77722\ttest-auc:0.75956\n",
+      "[154]\ttrain-auc:0.77733\ttest-auc:0.75957\n",
+      "[155]\ttrain-auc:0.77745\ttest-auc:0.75960\n",
+      "[156]\ttrain-auc:0.77753\ttest-auc:0.75968\n",
+      "[157]\ttrain-auc:0.77760\ttest-auc:0.75973\n",
+      "[158]\ttrain-auc:0.77774\ttest-auc:0.75985\n",
+      "[159]\ttrain-auc:0.77779\ttest-auc:0.75988\n",
+      "[160]\ttrain-auc:0.77789\ttest-auc:0.75996\n",
+      "[161]\ttrain-auc:0.77799\ttest-auc:0.75998\n",
+      "[162]\ttrain-auc:0.77810\ttest-auc:0.76003\n",
+      "[163]\ttrain-auc:0.77821\ttest-auc:0.76007\n",
+      "[164]\ttrain-auc:0.77829\ttest-auc:0.76008\n",
+      "[165]\ttrain-auc:0.77842\ttest-auc:0.76012\n",
+      "[166]\ttrain-auc:0.77851\ttest-auc:0.76016\n",
+      "[167]\ttrain-auc:0.77864\ttest-auc:0.76019\n",
+      "[168]\ttrain-auc:0.77879\ttest-auc:0.76021\n",
+      "[169]\ttrain-auc:0.77890\ttest-auc:0.76023\n",
+      "[170]\ttrain-auc:0.77896\ttest-auc:0.76018\n",
+      "[171]\ttrain-auc:0.77910\ttest-auc:0.76015\n",
+      "[172]\ttrain-auc:0.77920\ttest-auc:0.76017\n",
+      "[173]\ttrain-auc:0.77931\ttest-auc:0.76027\n",
+      "[174]\ttrain-auc:0.77944\ttest-auc:0.76031\n",
+      "[175]\ttrain-auc:0.77960\ttest-auc:0.76039\n",
+      "[176]\ttrain-auc:0.77970\ttest-auc:0.76046\n",
+      "[177]\ttrain-auc:0.77983\ttest-auc:0.76046\n",
+      "[178]\ttrain-auc:0.77994\ttest-auc:0.76043\n",
+      "[179]\ttrain-auc:0.78002\ttest-auc:0.76046\n",
+      "[180]\ttrain-auc:0.78017\ttest-auc:0.76043\n",
+      "[181]\ttrain-auc:0.78027\ttest-auc:0.76048\n",
+      "[182]\ttrain-auc:0.78038\ttest-auc:0.76055\n",
+      "[183]\ttrain-auc:0.78049\ttest-auc:0.76058\n",
+      "[184]\ttrain-auc:0.78060\ttest-auc:0.76059\n",
+      "[185]\ttrain-auc:0.78070\ttest-auc:0.76058\n",
+      "[186]\ttrain-auc:0.78080\ttest-auc:0.76062\n",
+      "[187]\ttrain-auc:0.78089\ttest-auc:0.76064\n",
+      "[188]\ttrain-auc:0.78098\ttest-auc:0.76063\n",
+      "[189]\ttrain-auc:0.78108\ttest-auc:0.76072\n",
+      "[190]\ttrain-auc:0.78115\ttest-auc:0.76074\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[191]\ttrain-auc:0.78125\ttest-auc:0.76080\n",
+      "[192]\ttrain-auc:0.78132\ttest-auc:0.76076\n",
+      "[193]\ttrain-auc:0.78137\ttest-auc:0.76077\n",
+      "[194]\ttrain-auc:0.78147\ttest-auc:0.76078\n",
+      "[195]\ttrain-auc:0.78156\ttest-auc:0.76078\n",
+      "[196]\ttrain-auc:0.78165\ttest-auc:0.76078\n",
+      "[197]\ttrain-auc:0.78172\ttest-auc:0.76078\n",
+      "[198]\ttrain-auc:0.78180\ttest-auc:0.76078\n",
+      "[199]\ttrain-auc:0.78192\ttest-auc:0.76079\n",
+      "[200]\ttrain-auc:0.78199\ttest-auc:0.76084\n",
+      "[201]\ttrain-auc:0.78213\ttest-auc:0.76085\n",
+      "[202]\ttrain-auc:0.78220\ttest-auc:0.76082\n",
+      "[203]\ttrain-auc:0.78227\ttest-auc:0.76087\n",
+      "[204]\ttrain-auc:0.78232\ttest-auc:0.76086\n",
+      "[205]\ttrain-auc:0.78239\ttest-auc:0.76084\n",
+      "[206]\ttrain-auc:0.78251\ttest-auc:0.76088\n",
+      "[207]\ttrain-auc:0.78257\ttest-auc:0.76086\n",
+      "[208]\ttrain-auc:0.78266\ttest-auc:0.76093\n",
+      "[209]\ttrain-auc:0.78277\ttest-auc:0.76093\n",
+      "[210]\ttrain-auc:0.78281\ttest-auc:0.76091\n",
+      "[211]\ttrain-auc:0.78287\ttest-auc:0.76090\n",
+      "[212]\ttrain-auc:0.78293\ttest-auc:0.76090\n",
+      "[213]\ttrain-auc:0.78298\ttest-auc:0.76088\n",
+      "[214]\ttrain-auc:0.78305\ttest-auc:0.76092\n",
+      "[215]\ttrain-auc:0.78315\ttest-auc:0.76095\n",
+      "[216]\ttrain-auc:0.78320\ttest-auc:0.76091\n",
+      "[217]\ttrain-auc:0.78324\ttest-auc:0.76089\n",
+      "[218]\ttrain-auc:0.78332\ttest-auc:0.76093\n",
+      "[219]\ttrain-auc:0.78344\ttest-auc:0.76097\n",
+      "[220]\ttrain-auc:0.78352\ttest-auc:0.76103\n",
+      "[221]\ttrain-auc:0.78357\ttest-auc:0.76106\n",
+      "[222]\ttrain-auc:0.78366\ttest-auc:0.76106\n",
+      "[223]\ttrain-auc:0.78367\ttest-auc:0.76105\n",
+      "[224]\ttrain-auc:0.78380\ttest-auc:0.76110\n",
+      "[225]\ttrain-auc:0.78386\ttest-auc:0.76111\n",
+      "[226]\ttrain-auc:0.78394\ttest-auc:0.76113\n",
+      "[227]\ttrain-auc:0.78409\ttest-auc:0.76114\n",
+      "[228]\ttrain-auc:0.78414\ttest-auc:0.76115\n",
+      "[229]\ttrain-auc:0.78419\ttest-auc:0.76116\n",
+      "[230]\ttrain-auc:0.78427\ttest-auc:0.76122\n",
+      "[231]\ttrain-auc:0.78433\ttest-auc:0.76120\n",
+      "[232]\ttrain-auc:0.78439\ttest-auc:0.76119\n",
+      "[233]\ttrain-auc:0.78443\ttest-auc:0.76122\n",
+      "[234]\ttrain-auc:0.78451\ttest-auc:0.76120\n",
+      "[235]\ttrain-auc:0.78460\ttest-auc:0.76121\n",
+      "[236]\ttrain-auc:0.78467\ttest-auc:0.76119\n",
+      "[237]\ttrain-auc:0.78469\ttest-auc:0.76121\n",
+      "[238]\ttrain-auc:0.78475\ttest-auc:0.76121\n",
+      "[239]\ttrain-auc:0.78487\ttest-auc:0.76121\n",
+      "[240]\ttrain-auc:0.78498\ttest-auc:0.76126\n",
+      "[241]\ttrain-auc:0.78509\ttest-auc:0.76125\n",
+      "[242]\ttrain-auc:0.78516\ttest-auc:0.76128\n",
+      "[243]\ttrain-auc:0.78527\ttest-auc:0.76130\n",
+      "[244]\ttrain-auc:0.78534\ttest-auc:0.76132\n",
+      "[245]\ttrain-auc:0.78542\ttest-auc:0.76132\n",
+      "[246]\ttrain-auc:0.78548\ttest-auc:0.76136\n",
+      "[247]\ttrain-auc:0.78556\ttest-auc:0.76135\n",
+      "[248]\ttrain-auc:0.78562\ttest-auc:0.76136\n",
+      "[249]\ttrain-auc:0.78572\ttest-auc:0.76135\n",
+      "[250]\ttrain-auc:0.78581\ttest-auc:0.76135\n",
+      "[251]\ttrain-auc:0.78592\ttest-auc:0.76136\n",
+      "[252]\ttrain-auc:0.78597\ttest-auc:0.76139\n",
+      "[253]\ttrain-auc:0.78607\ttest-auc:0.76137\n",
+      "[254]\ttrain-auc:0.78612\ttest-auc:0.76143\n",
+      "[255]\ttrain-auc:0.78619\ttest-auc:0.76145\n",
+      "[256]\ttrain-auc:0.78627\ttest-auc:0.76148\n",
+      "[257]\ttrain-auc:0.78635\ttest-auc:0.76151\n",
+      "[258]\ttrain-auc:0.78644\ttest-auc:0.76150\n",
+      "[259]\ttrain-auc:0.78649\ttest-auc:0.76153\n",
+      "[260]\ttrain-auc:0.78654\ttest-auc:0.76151\n",
+      "[261]\ttrain-auc:0.78660\ttest-auc:0.76150\n",
+      "[262]\ttrain-auc:0.78665\ttest-auc:0.76153\n",
+      "[263]\ttrain-auc:0.78672\ttest-auc:0.76152\n",
+      "[264]\ttrain-auc:0.78681\ttest-auc:0.76155\n",
+      "[265]\ttrain-auc:0.78685\ttest-auc:0.76157\n",
+      "[266]\ttrain-auc:0.78691\ttest-auc:0.76158\n",
+      "[267]\ttrain-auc:0.78696\ttest-auc:0.76159\n",
+      "[268]\ttrain-auc:0.78705\ttest-auc:0.76159\n",
+      "[269]\ttrain-auc:0.78708\ttest-auc:0.76161\n",
+      "[270]\ttrain-auc:0.78713\ttest-auc:0.76163\n",
+      "[271]\ttrain-auc:0.78720\ttest-auc:0.76163\n",
+      "[272]\ttrain-auc:0.78724\ttest-auc:0.76165\n",
+      "[273]\ttrain-auc:0.78734\ttest-auc:0.76165\n",
+      "[274]\ttrain-auc:0.78738\ttest-auc:0.76167\n",
+      "[275]\ttrain-auc:0.78744\ttest-auc:0.76168\n",
+      "[276]\ttrain-auc:0.78749\ttest-auc:0.76167\n",
+      "[277]\ttrain-auc:0.78752\ttest-auc:0.76164\n",
+      "[278]\ttrain-auc:0.78756\ttest-auc:0.76162\n",
+      "[279]\ttrain-auc:0.78760\ttest-auc:0.76161\n",
+      "[280]\ttrain-auc:0.78766\ttest-auc:0.76163\n",
+      "[281]\ttrain-auc:0.78774\ttest-auc:0.76161\n",
+      "[282]\ttrain-auc:0.78782\ttest-auc:0.76164\n",
+      "[283]\ttrain-auc:0.78792\ttest-auc:0.76163\n",
+      "[284]\ttrain-auc:0.78801\ttest-auc:0.76166\n",
+      "[285]\ttrain-auc:0.78810\ttest-auc:0.76167\n",
+      "[286]\ttrain-auc:0.78817\ttest-auc:0.76168\n",
+      "[287]\ttrain-auc:0.78820\ttest-auc:0.76169\n",
+      "[288]\ttrain-auc:0.78826\ttest-auc:0.76167\n",
+      "[289]\ttrain-auc:0.78834\ttest-auc:0.76170\n",
+      "[290]\ttrain-auc:0.78838\ttest-auc:0.76173\n",
+      "[291]\ttrain-auc:0.78848\ttest-auc:0.76179\n",
+      "[292]\ttrain-auc:0.78852\ttest-auc:0.76179\n",
+      "[293]\ttrain-auc:0.78854\ttest-auc:0.76178\n",
+      "[294]\ttrain-auc:0.78859\ttest-auc:0.76179\n",
+      "[295]\ttrain-auc:0.78866\ttest-auc:0.76178\n",
+      "[296]\ttrain-auc:0.78875\ttest-auc:0.76179\n",
+      "[297]\ttrain-auc:0.78883\ttest-auc:0.76179\n",
+      "[298]\ttrain-auc:0.78893\ttest-auc:0.76180\n",
+      "[299]\ttrain-auc:0.78898\ttest-auc:0.76176\n",
+      "[300]\ttrain-auc:0.78907\ttest-auc:0.76177\n",
+      "[301]\ttrain-auc:0.78912\ttest-auc:0.76178\n",
+      "[302]\ttrain-auc:0.78917\ttest-auc:0.76176\n",
+      "[303]\ttrain-auc:0.78928\ttest-auc:0.76179\n",
+      "[304]\ttrain-auc:0.78932\ttest-auc:0.76176\n",
+      "[305]\ttrain-auc:0.78943\ttest-auc:0.76174\n",
+      "[306]\ttrain-auc:0.78952\ttest-auc:0.76174\n",
+      "[307]\ttrain-auc:0.78957\ttest-auc:0.76173\n",
+      "[308]\ttrain-auc:0.78963\ttest-auc:0.76175\n",
+      "[309]\ttrain-auc:0.78966\ttest-auc:0.76175\n",
+      "[310]\ttrain-auc:0.78975\ttest-auc:0.76175\n",
+      "[311]\ttrain-auc:0.78982\ttest-auc:0.76179\n",
+      "[312]\ttrain-auc:0.78985\ttest-auc:0.76179\n",
+      "[313]\ttrain-auc:0.78990\ttest-auc:0.76179\n",
+      "[314]\ttrain-auc:0.78999\ttest-auc:0.76178\n",
+      "[315]\ttrain-auc:0.79002\ttest-auc:0.76181\n",
+      "[316]\ttrain-auc:0.79008\ttest-auc:0.76181\n",
+      "[317]\ttrain-auc:0.79011\ttest-auc:0.76182\n",
+      "[318]\ttrain-auc:0.79015\ttest-auc:0.76181\n",
+      "[319]\ttrain-auc:0.79020\ttest-auc:0.76182\n",
+      "[320]\ttrain-auc:0.79026\ttest-auc:0.76180\n",
+      "[321]\ttrain-auc:0.79028\ttest-auc:0.76179\n",
+      "[322]\ttrain-auc:0.79038\ttest-auc:0.76182\n",
+      "[323]\ttrain-auc:0.79045\ttest-auc:0.76181\n",
+      "[324]\ttrain-auc:0.79050\ttest-auc:0.76182\n",
+      "[325]\ttrain-auc:0.79058\ttest-auc:0.76182\n",
+      "[326]\ttrain-auc:0.79066\ttest-auc:0.76182\n",
+      "[327]\ttrain-auc:0.79069\ttest-auc:0.76182\n",
+      "[328]\ttrain-auc:0.79073\ttest-auc:0.76183\n",
+      "[329]\ttrain-auc:0.79081\ttest-auc:0.76182\n",
+      "[330]\ttrain-auc:0.79087\ttest-auc:0.76182\n",
+      "[331]\ttrain-auc:0.79091\ttest-auc:0.76182\n",
+      "[332]\ttrain-auc:0.79099\ttest-auc:0.76184\n",
+      "[333]\ttrain-auc:0.79107\ttest-auc:0.76186\n",
+      "[334]\ttrain-auc:0.79116\ttest-auc:0.76190\n",
+      "[335]\ttrain-auc:0.79123\ttest-auc:0.76192\n",
+      "[336]\ttrain-auc:0.79134\ttest-auc:0.76195\n",
+      "[337]\ttrain-auc:0.79141\ttest-auc:0.76194\n",
+      "[338]\ttrain-auc:0.79148\ttest-auc:0.76194\n",
+      "[339]\ttrain-auc:0.79155\ttest-auc:0.76196\n",
+      "[340]\ttrain-auc:0.79165\ttest-auc:0.76197\n",
+      "[341]\ttrain-auc:0.79170\ttest-auc:0.76195\n",
+      "[342]\ttrain-auc:0.79176\ttest-auc:0.76199\n",
+      "[343]\ttrain-auc:0.79180\ttest-auc:0.76200\n",
+      "[344]\ttrain-auc:0.79184\ttest-auc:0.76201\n",
+      "[345]\ttrain-auc:0.79192\ttest-auc:0.76200\n",
+      "[346]\ttrain-auc:0.79195\ttest-auc:0.76200\n",
+      "[347]\ttrain-auc:0.79204\ttest-auc:0.76202\n",
+      "[348]\ttrain-auc:0.79208\ttest-auc:0.76201\n",
+      "[349]\ttrain-auc:0.79212\ttest-auc:0.76200\n",
+      "[350]\ttrain-auc:0.79216\ttest-auc:0.76200\n",
+      "[351]\ttrain-auc:0.79221\ttest-auc:0.76198\n",
+      "[352]\ttrain-auc:0.79229\ttest-auc:0.76197\n",
+      "[353]\ttrain-auc:0.79234\ttest-auc:0.76197\n",
+      "[354]\ttrain-auc:0.79244\ttest-auc:0.76203\n",
+      "[355]\ttrain-auc:0.79252\ttest-auc:0.76205\n",
+      "[356]\ttrain-auc:0.79261\ttest-auc:0.76204\n",
+      "[357]\ttrain-auc:0.79266\ttest-auc:0.76203\n",
+      "[358]\ttrain-auc:0.79271\ttest-auc:0.76202\n",
+      "[359]\ttrain-auc:0.79276\ttest-auc:0.76202\n",
+      "[360]\ttrain-auc:0.79280\ttest-auc:0.76200\n",
+      "[361]\ttrain-auc:0.79289\ttest-auc:0.76199\n",
+      "[362]\ttrain-auc:0.79293\ttest-auc:0.76199\n",
+      "[363]\ttrain-auc:0.79300\ttest-auc:0.76198\n",
+      "[364]\ttrain-auc:0.79307\ttest-auc:0.76195\n",
+      "[365]\ttrain-auc:0.79314\ttest-auc:0.76198\n",
+      "[366]\ttrain-auc:0.79321\ttest-auc:0.76196\n",
+      "[367]\ttrain-auc:0.79327\ttest-auc:0.76195\n",
+      "[368]\ttrain-auc:0.79335\ttest-auc:0.76194\n",
+      "[369]\ttrain-auc:0.79342\ttest-auc:0.76194\n",
+      "[370]\ttrain-auc:0.79346\ttest-auc:0.76196\n",
+      "[371]\ttrain-auc:0.79351\ttest-auc:0.76196\n",
+      "[372]\ttrain-auc:0.79354\ttest-auc:0.76200\n",
+      "[373]\ttrain-auc:0.79363\ttest-auc:0.76202\n",
+      "[374]\ttrain-auc:0.79370\ttest-auc:0.76202\n",
+      "[375]\ttrain-auc:0.79375\ttest-auc:0.76204\n",
+      "[376]\ttrain-auc:0.79383\ttest-auc:0.76203\n",
+      "[377]\ttrain-auc:0.79387\ttest-auc:0.76203\n",
+      "[378]\ttrain-auc:0.79391\ttest-auc:0.76199\n",
+      "[379]\ttrain-auc:0.79396\ttest-auc:0.76197\n",
+      "[380]\ttrain-auc:0.79404\ttest-auc:0.76197\n",
+      "Stopping. Best iteration:\n",
+      "[355]\ttrain-auc:0.79252\ttest-auc:0.76205\n",
+      "\n"
      ]
     }
    ],
@@ -2417,7 +2694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
